Fix double border.

--- a/app/stylesheets/application/devcms_core_application.sass
+++ b/app/stylesheets/application/devcms_core_application.sass
@@ -103,6 +103,8 @@ input
   border-bottom: 1px solid #0076af
   padding-left:  2px
   margin-bottom: 8px
+  &.logoutPageText
+    border: 0
 
 /** Other stuff *
 
